Fixed flex-grow/shrink betwen the projects and sidebar; and flex-gap between each project card

--- a/styles/index.css
+++ b/styles/index.css
@@ -4,7 +4,7 @@
     flex-flow: row nowrap;
     
     /* Then we define how is distributed the remaining space */
-    justify-content: space-between;
+    justify-content: space-around;
     align-items: center;
     
     padding: 0;
@@ -59,8 +59,9 @@
 }
 
 #sidebar {
-    flex-grow: 1;
-    width: 10px;
+    /* flex-grow: 1; */
+    flex-shrink: 0;
+    width: 250px;
     margin-inline-end: 80px;
     outline: 2px solid black;
     padding: 10px;
@@ -86,7 +87,9 @@ ul {
 }
 
 #projects {
-    justify-content: flex-start;
+    justify-content: space-evenly;
     flex-wrap: wrap;
     margin-inline-start: 80px;
+    gap: 15px 5px; /* row-gap column gap */
+    flex-grow: 3;
 }
